Fix logo visibility by using local logo with white text

--- a/assets/stylesheets/discourse-siwe.scss
+++ b/assets/stylesheets/discourse-siwe.scss
@@ -27,7 +27,6 @@
   max-width: 200px;
   margin-bottom: 1.5em;
   height: auto;
-  filter: brightness(0) invert(1); /* Deixa o logo branco */
 }
 
 .siwe-auth-container h1 {
